--- a/cv-resume site.html
+++ b/cv-resume site.html
@@ -532,18 +532,29 @@
       </div>
       <!-- The Modal for Calendly and Manual Form -->
       <div id="buttonOptionsModal" class="w3-modal">
-         <div class="w3-modal-content w3-animate-top w3-card-4" style="max-width: 400px; margin: auto;">
+         <div class="w3-modal-content w3-animate-top w3-card-4" style="max-width: 600px; margin: auto;">
             <header class="w3-container">
                <span onclick="closebuttonOptionsModal()" class="w3-button w3-display-topright">&times;</span>
                <h2>Contact Options</h2>
             </header>
             <div class="w3-container">
-               <a href="#" onclick="closebuttonOptionsModal(), Calendly.initPopupWidget({url: 'https://calendly.com/rea-media/strategy-planning-call'});return false;" class="w3-button w3-block w3-margin-bottom" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;"> <i class="fa-solid fa-calendar-check fa-fw"></i>
-               Calendly
-               </a>
-               <a href="#" onclick="closebuttonOptionsModal(), openContactModal()" class="w3-button w3-block" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;"> <i class="fa-regular fa-keyboard fa-fw"></i>
-               Manual Form
-               </a>
+               <div class="w3-container">
+                  <a href="sms:15188081122" target="_blank"  class="w3-button w3-block w3-margin-bottom" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;">
+                  <i class="fa fa-comments fa-fw"></i> Text
+                  </a>
+                  <a href="tel:15188081122" target="_blank" class="w3-button w3-block w3-margin-bottom" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;">
+                  <i class="fa fa-phone fa-fw"></i> Call
+                  </a>
+                  <a href="mailto:oliver@rea.?subject=Hello%20There&body=I%20hope%20you%20are%20doing%20well." target="_blank" class="w3-button w3-block w3-margin-bottom" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;">
+                  <i class="fa fa-envelope fa-fw"></i> Email
+                  </a>
+                  <a href="#" onclick="closebuttonOptionsModal(), Calendly.initPopupWidget({url: 'https://calendly.com/rea-media/strategy-planning-call'});return false;" class="w3-button w3-block w3-margin-bottom" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;">
+                  <i class="fa fa-calendar-days fa-fw"></i> Calendly
+                  </a>
+                  <a href="#" onclick="closebuttonOptionsModal(), openContactModal()" class="w3-button w3-block" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;">
+                  <i class="fa fa-keyboard fa-fw"></i> Manual Form
+                  </a>
+               </div>
             </div>
          </div>
       </div>
