--- a/cv-resume site.html
+++ b/cv-resume site.html
@@ -549,7 +549,7 @@
                   <i class="fa fa-envelope fa-fw"></i> Email
                   </a>
                   <a href="#" onclick="closebuttonOptionsModal(), Calendly.initPopupWidget({url: 'https://calendly.com/rea-media/strategy-planning-call'});return false;" class="w3-button w3-block w3-margin-bottom" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;">
-                  <i class="fa fa-calendar-days fa-fw"></i> Calendly
+                  <i class="fa fa-calendar fa-fw"></i> Calendly
                   </a>
                   <a href="#" onclick="closebuttonOptionsModal(), openContactModal()" class="w3-button w3-block" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;">
                   <i class="fa fa-keyboard fa-fw"></i> Manual Form
