--- a/cv-resume site.html
+++ b/cv-resume site.html
@@ -552,7 +552,7 @@
                   <i class="fa fa-calendar fa-fw"></i> Calendly
                   </a>
                   <a href="#" onclick="closebuttonOptionsModal(), openContactModal()" class="w3-button w3-block" style="border-radius: 4px; background-color: #596CCE; color: white; padding: 16px 20px;">
-                  <i class="fa fa-keyboard fa-fw"></i> Manual Form
+                  <i class="fa fa-edit fa-fw"></i> Manual Form
                   </a>
                </div>
             </div>
